# globalcaps-rs

./: Cargo.toml  install.ps1
.github/workflows/: lint.yml
src/: main.rs
